<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_main_name">工具箱</string>
    <string name="setting_name_permission">权限设置</string>
    <string name="setting_name_sp">分割线</string>
    <string name="setting_name_charge">无线充电</string>
    <string name="setting_name_boot">启动执行</string>
    <string name="setting_name_music">音乐助手</string>
    <string name="setting_name_radar">倒车雷达</string>
    <string name="setting_name_rotate">屏幕旋转</string>
    <string name="close">关闭</string>
    <string name="open">开启</string>
    <string name="none">忽略</string>
    <string name="rotate_sensor">重力</string>
    <string name="rotate_portrait">竖屏</string>
    <string name="rotate_landscape">横屏</string>
    <string name="setting_name_adb">ADB调试</string>
    <string name="permission_float">悬浮窗</string>
    <string name="permission_read_logs">日志</string>
    <string name="permission_accessibility">辅助</string>
    <string name="permission_write_secure">修改设置</string>
    <string name="permission_adb">ADB</string>
    <string name="permission_notify">通知</string>
    <string name="cb_full_screen">全屏</string>
    <string name="cb_float_status_bar">状态栏</string>
    <string name="cb_split_screen">分屏</string>
    <string name="cb_recent_screen">多任务</string>
    <string name="cb_home">桌面</string>
    <string name="cb_lock_screen">锁屏</string>
    <string name="setting_name_item_bar">侧边栏</string>
    <string name="main_title_add_setting">添加设置</string>
    <string name="download_title">下载\n</string>
    <string name="main_title_cur_version">当前版本\n</string>
</resources>