<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/rg_charge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="15dp"
            android:text="@string/setting_name_charge"
            android:textSize="15sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rbChargeClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/close" />

        <View
            android:layout_width="0dp"
            android:layout_height="1px"
            android:layout_weight="1" />

        <RadioButton
            android:id="@+id/rbChargeOpen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open" />

        <View
            android:layout_width="0dp"
            android:layout_height="1px"
            android:layout_weight="1" />

        <RadioButton
            android:id="@+id/rbChargeNone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/none" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/rg_orientation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="15dp"
            android:text="@string/setting_name_rotate"
            android:textSize="15sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rbLandScape"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rotate_landscape" />

        <View
            android:layout_width="0dp"
            android:layout_height="1px"
            android:layout_weight="1" />

        <RadioButton
            android:id="@+id/rbPortrait"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rotate_portrait" />

        <View
            android:layout_width="0dp"
            android:layout_height="1px"
            android:layout_weight="1" />

        <RadioButton
            android:id="@+id/rbFullSensor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rotate_sensor" />

        <View
            android:layout_width="0dp"
            android:layout_height="1px"
            android:layout_weight="1" />

        <RadioButton
            android:id="@+id/rbUndefine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/none" />
    </RadioGroup>
</LinearLayout>
