<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="15dp"
        android:text="@string/app_main_permission"
        android:textSize="18sp"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/cb_float"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/permission_float" />

    <CheckBox
        android:id="@+id/cb_read_logs"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/permission_read_logs" />

    <CheckBox
        android:id="@+id/cb_accessibility"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/permission_accessibility" />
</LinearLayout>